--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,7 +12,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: url(/image.jpg) no-repeat;
+  background: url(/stuff/image.jpg) no-repeat;
   background-position: center;
   background-size: cover;
   z-index: -5;
